Improve blocks.yml handling, GUIs, and world expiry